argocd/overlays/local/domain-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
spec:
  routes:
    - kind: Rule
      match: Host(`cd.cp20.local`)

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: appset
spec:
  routes:
    - kind: Rule
      match: Host(`appset.cd.cp20.local`)
