argocd/overlays/local/ingress-route-tls.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-tls

spec:
  entryPoints:
    - websecure
  tls:
    secretName: argocd-server-tls
  routes:
    - kind: Rule
      match: Host(`cd.local.cp20.dev`)
      services:
        - kind: Service
          namespace: argocd
          name: argocd-server
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
