argocd/overlays/local/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server

spec:
  routes:
    - kind: Rule
      match: Host(`cd.cp20.local`)
      services:
        - kind: Service
          namespace: argocd
          name: argocd-server
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
